# shelve

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker.nix  flake.nix  module.nix  overlay.nix  package.nix
.github/workflows/: ci.yaml  docker.yaml
nix/: module.nix  overlay.nix  package.nix
src/: expire_queue.rs  main.rs  token.rs  upload.rs
templates/: index.html
